<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="26dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="456dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/mcgpalette1_A200"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Dupont"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/iron" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textColor="@color/mcgpalette1_A200"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/input_first_name"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Olivier"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/iron" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/mcgpalette1_A200"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="dupont@email.com"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/iron" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColor="@color/mcgpalette1_A200"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="0685241565"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/iron" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adresse"
                    android:textColor="@color/mcgpalette1_A200"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/input_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="41 boulevard Victor Hugo"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/iron" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Code postal"
                        android:textColor="@color/mcgpalette1_A200"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:text="Ville"
                        android:textColor="@color/mcgpalette1_A200"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/input_zip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:text="75014"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/input_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:inputType="textCapWords"
                        android:text="Paris"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_below="@+id/rellay2"
        android:layout_marginTop="13dp"
        android:paddingBottom="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorblack"
            android:text="Sauvegarder"
            android:textColor="@color/colorwhite" />

    </RelativeLayout>

</RelativeLayout>
